--- a/web/app/views/cinemas/index.html.erb
+++ b/web/app/views/cinemas/index.html.erb
@@ -7,7 +7,7 @@
 <%= render(ModalComponent.new) %>
 
 <%# cache [current_user, 'cinemas', @cinemas&.map(&:id), @cinemas&.max&.updated_at&.to_i] do %>
-<section class="mx-auto mt-6 md:mt-12 max-w-screen-lg min-h-screen px-5 mb-16">
+<section class="mx-auto mt-6 md:mt-12 max-w-screen-lg min-h-screen px-5 md:px-0 mb-16">
 	<h1 class="hidden md:inline-block c-h2 mb-6">Cinemas em Porto Alegre</h1>
 
 	<div class="gap-5 grid grid-cols-1 justify-self-stretch md:grid-cols-2">
@@ -54,7 +54,7 @@
 					</div>
 				</div>
 				<div class="flex space-x-3">
-					<% cinema.movies.limit(mobile_device? ? 4 : 6).each_with_index do |movie, index| %>
+					<% cinema.movies.limit(mobile_device? ? 4 : 6).reverse.each_with_index do |movie, index| %>
 						<% if index < (mobile_device? ? 3 : 5) %>
 							<div class="flex flex-col w-16 transition-transform transform group md:hover:scale-105">
 								<%= link_to cine_film_path(movie), class: 'flex flex-col', data: { 'turbo-preserve-scroll': true } do %>
