--- a/web/app/components/main_sidebar/large_event_component.html.erb
+++ b/web/app/components/main_sidebar/large_event_component.html.erb
@@ -105,7 +105,7 @@
 						</div>
 						<div class="my-auto text-xs text-gray-800">
 							<% if @event.multiple_hours? %>
-								<%= "#{I18n.l(@event.start_time, format: :date).capitalize}, em múltiplos horários#{'.' unless @event&.start_time > DateTime.now + 2}" %>
+								<%= "#{I18n.l(@event.start_time, format: :day_month_year).capitalize}, em múltiplos horários#{'.' unless @event&.start_time > DateTime.now + 2}" %>
 								<%= ", daqui #{helpers.distance_of_time_in_words @event&.start_time, DateTime.now, false, except: ['hours', 'minutes']}." if @event&.start_time > DateTime.now + 2 %>
 								<%= link_to 'Confirmar horários', @event.source_url, class: 'text-brand-600', rel: 'nofollow', target: '_blank' rescue nil %>
 							<% else %>
