--- a/web/app/views/events/show.amp.erb
+++ b/web/app/views/events/show.amp.erb
@@ -88,7 +88,7 @@
             <%= "#{@event.day_of_week['decorator']} #{format_hour @event.start_time }" %>
           </div>
           <span>
-              <%= I18n.l(@event.start_time, format: :long) %>
+              <%= I18n.l(@event.start_time) %>
           </span>
         </div>
       <% end %>
