--- a/web/app/views/organizers/show.html.erb
+++ b/web/app/views/organizers/show.html.erb
@@ -39,12 +39,12 @@
 			</div>
 		</div>
 		<div class="col-span-12 space-y-12 md:col-span-8">
-			<div class="border-b md:border-0 overflow-hidden mx-auto space-y-3 is-animated md:rounded-2xl md:max-w-screen-sm sm:container">
-				<h2 class="px-5 md:pb-2 c-h2">Próximos eventos</h2>
+			<div class="px-5 md:px-0 border-b md:border-0 overflow-hidden mx-auto space-y-3 is-animated md:max-w-screen-sm sm:container">
+				<h2 class="md:pb-2 c-h2">Próximos eventos</h2>
 				<% if @upcoming_events.present? %>
 					<%= render MainSidebar::GroupByDayListComponent.new events: @upcoming_events, user: current_user, pagy: @pagy %>
 				<% else %>
-					<div class="px-5">
+					<div class="">
 						Sem eventos para os próximos dias
 					</div>
 				<% end %>
