--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -1,3 +1,5 @@
+<% content_for :canonical_url, 'https://alegreme.com/' %>
+
 <%= render ModalComponent.new %>
 
 <div id="main-content" class="gap-24 mx-auto max-w-screen-lg md:grid md:grid-cols-8">
