--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -80,7 +80,7 @@
 </div>
 
 <%= render partial: 'components/bottom-navigation' if mobile_device? %>
-<%= render partial: 'layouts/footer' %>
+<%= render partial: 'layouts/footer', cached: true %>
 
 </body>
 </html>
