Adjust movies and events h1 text to had Porto Alegre

--- a/web/app/components/hero/swipable_component.html.erb
+++ b/web/app/components/hero/swipable_component.html.erb
@@ -48,7 +48,7 @@
 				<% if current_stage == :suggestions %>
 					<div class="md:mb-5">
 						<div class="c-h2">
-							Sugestões para você
+							Sugestões para <%= truncate(@user.first_name, length: 20) %>
 						</div>
 					</div>
 					<div data-controller="loader"
