--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -62,7 +62,7 @@
 						</h1>
 					<% else %>
 						<h1 class="c-h2">
-							Eventos nos próximos dias
+							Eventos em Porto Alegre
 						</h1>
 						<%= render MainSidebar::FilterComponent.new(session:           session.id,
 																												params:            params,
