Add tagline to logo with Porto Alegre

--- a/web/app/views/layouts/_footer.html.erb
+++ b/web/app/views/layouts/_footer.html.erb
@@ -21,6 +21,9 @@
 		oi@alegreme.com
 	</div>
 	<div class="flex-wrap inline-flex items-center justify-center">
+		Eventos e cinema em Porto Alegre
+	</div>
+	<div class="flex-wrap inline-flex items-center justify-center">
 		<div>
 			Feito
 			<!-- <a href="https://www.instagram.com/jonataseduardo/">@jonataseduardo</a> -->
