--- a/web/app/components/large_event_component.html.erb
+++ b/web/app/components/large_event_component.html.erb
@@ -4,7 +4,7 @@
 			 data-event-identifier="<%= @event.id %>"
 			 data-event-description-open="false"
 			 data-event-modifier="single">
-		<div class="hidden md:flex items-center justify-between px-5 mb-2">
+		<div class="hidden md:flex items-center justify-between px-5 md:px-0 mb-2">
 			<div class="pr-3">
 				<span class="text-sm font-light text-gray-400">
 					<% if helpers.already_happened? @event %>
@@ -42,12 +42,12 @@
 				</div>
 			</div>
 		</div>
-		<div class="md:mx-5">
+		<div class="">
 			<img src="<%= @event.image[:original].try { |image| image.url(public: true) } %>"
 					 alt="<%= @event.name %>"
 					 class="object-cover object-center w-full h-60 bg-gray-50 md:h-80 md:rounded-lg">
 		</div>
-		<div class="md:hidden relative md:px-5">
+		<div class="md:hidden relative">
 			<div class="border-b border-gray-100 flex items-center justify-between mt-5 pb-5 px-5">
 				<div class="pr-3">
 					<span class="text-sm font-light text-gray-600">
@@ -86,7 +86,7 @@
 			</div>
 		</div>
 		<% unless helpers.already_happened? @event %>
-			<div class="flex p-5 border-b border-gray-100 md:border-0">
+			<div class="flex py-5 px-5 md:px-0 border-b border-gray-100 md:border-0">
 				<div class="flex flex-col justify-center py-2 px-3 my-auto mr-5 text-center rounded-lg text-gray-800 border h-14 w-content">
 					<div class="text-sm font-bold leading-tight uppercase">
 						<% if @event.start_time < Date.today + 7 %>
@@ -109,7 +109,7 @@
 				</div>
 			</div>
 		<% end %>
-		<div class="flex flex-col py-5 px-5 border-b border-gray-100 md:border-0 md:flex-row">
+		<div class="flex flex-col py-5 px-5 md:px-0 border-b border-gray-100 md:border-0 md:flex-row">
 			<div class="flex-grow">
 				<%= link_to place_path(@event&.place), class: 'inline items-center space-x-2', data: { 'turbo-preserve-scroll': true } do %>
 					<h2 class="inline c-h3">
@@ -138,7 +138,7 @@
 				<% end %>
 			</div>
 		</div>
-		<div class="py-5 px-5">
+		<div class="py-5 px-5 md:px-0">
 			<h2 class="c-h3">Sobre o evento</h2>
 			<div class="mt-2 leading-relaxed break-words text-with-html">
 				<%= @event.description.html_safe %>
