--- a/web/app/views/layouts/_top-app-bar.html.erb
+++ b/web/app/views/layouts/_top-app-bar.html.erb
@@ -63,6 +63,7 @@
 						</g>
 					</svg>
 				</a>
+				<h1 class="text-center md:text-left absolute bottom-1 font-light left-0 text-xxs w-full">Eventos e cinema em Porto Alegre</h1>
 			<% end %>
 		</div>
 		<% if !current_user && controller_name == 'feeds' %>
