--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -2,8 +2,27 @@
 
 <%= render ModalComponent.new %>
 
+<% unless current_user || params[:day] || params[:category] %>
+	<div id="hero__presentation" data-turbo-permanent="" class="overflow-hidden relative gap-3 items-center mb-6 h-72 bg-gray-100 select-none md:h-52 md:items-start md:mb-12 md:mx-0 tap-highlight-none" style="min-height: 200px;background: linear-gradient(0deg, #f9f9f9, transparent); ">
+		<div class="relative z-20 mx-auto max-w-screen-lg h-full">
+			<%= image_pack_tag 'media/images/hero/banner.png', class: 'z-10 -top-12 absolute md:-top-24 md:right-0 md:w-4/12 object-cover top-0 w-full' %>
+			<div class="flex relative z-20 flex-col justify-end items-center pb-5 h-full md:justify-center md:items-baseline md:w-7/12">
+				<h1 class="hidden md:inline-block c-h2">
+					Eventos e cinema em Porto Alegre
+				</h1>
+				<h1 class="text-center md:hidden c-h2">
+					Eventos e cinema em Porto Alegre
+				</h1>
+				<span class="px-6 md:px-0 md:w-8/12 text-center md:text-left block leading-snug md:inline-block md:leading-normal md:text-base mt-1.5 text-xs">
+    		Shows, festas, cinema, feiras de rua... quase tudo que acontece em Porto Alegre está aqui 🤙
+			</span>
+			</div>
+		</div>
+	</div>
+<% end %>
+
 <div id="main-content" class="gap-24 mx-auto max-w-screen-lg md:grid md:grid-cols-8">
-	<section id="main-sidebar" class="col-span-8 pt-6 min-h-screen md:pt-12 space-y-16 md:col-span-5">
+	<section id="main-sidebar" class="col-span-8 pt-6 space-y-16 min-h-screen md:pt-12 md:col-span-5">
 		<% if notice %>
 			<div class="flex items-center p-3 space-x-2 max-w-screen-lg text-sm font-semibold rounded-lg border bg-brand-100 border-brand-200 text-brand-600">
 				<div class="flex flex-shrink-0 justify-center items-center w-12 h-12 rounded-full bg-brand-100 sm:h-10 sm:w-10">
@@ -18,22 +37,6 @@
 			</div>
 		<% end %>
 		<% unless params[:day] || params[:category] %>
-			<% unless current_user %>
-				<div id="hero__presentation" data-turbo-permanent="" class="overflow-hidden overflow-x-hidden relative gap-3 items-center mx-5 md:mx-0 mb-5 mb-16 h-56 rounded-lg border select-none md:mb-24 md:h-72 md:items-start tap-highlight-none" style="min-height: 200px">
-					<div class="relative z-20 px-3 pt-3 -mb-5 md:pt-5">
-						<h1 class="hidden md:inline-block c-h2 text-brand-600">
-							Eventos e cinema em Porto Alegre
-						</h1>
-						<h1 class="text-center md:hidden c-h2 text-brand-600">
-							Eventos e cinema em <br> Porto Alegre
-						</h1>
-						<span class="text-center md:text-left block leading-snug md:inline-block md:leading-normal md:text-base mt-1.5 text-brand-600 text-xs">
-    					Descubra eventos e siga seus locais favoritos para não perder nada que acontece na cidade.
-						</span>
-					</div>
-					<%= image_pack_tag 'media/images/welcome/experiences.jpg', class: 'absolute top-24 w-auto' %>
-				</div>
-			<% end %>
 			<% cache "#{current_user&.cache_key_with_version}/#{current_user&.liked_or_disliked_event_ids&.size}/hero--swipable" do %>
 				<%= render Hero::SwipableComponent.new(user: current_user) %>
 			<% end %>
