--- a/web/app/views/search/index.html.erb
+++ b/web/app/views/search/index.html.erb
@@ -3,24 +3,24 @@
 <%= render ModalComponent.new(action: 'create-account', title: 'Você precisa estar logado', text: 'Crie uma conta para salvar seus eventos favoritos e receber recomendações únicas 🤙') %>
 
 
-<div id="main-content" class="<%= class_names 'px-5 gap-24 grid-cols-8 max-w-screen-lg md:grid min-h-screen mx-auto',
+<div id="main-content" class="<%= class_names 'px-5 md:px-0 gap-24 grid-cols-8 max-w-screen-lg md:grid min-h-screen mx-auto',
 																							{} %>">
 	<section id="main-sidebar" class="md:col-span-5">
 		<%= notice %>
 		<% if (@search_result&.suggestions.present? rescue false) %>
-			<div class="mx-auto mb-10">
+			<div class="mx-auto mt-10 mb-5">
 				<h2 class="font-semibold text-gray-800">Você quis dizer?</h2>
 				<% @search_result&.suggestions&.each do |suggestion| %>
 					<a href="<%= search_index_path({ q: suggestion }) %>" class="me-chip mdc-chip">
-						<span class="inline-block py-2 mt-2 mr-2 text-sm text-gray-800 rounded-full border hover:bg-gray-100">
+						<span class="inline-block p-2 mt-2 mr-2 text-sm text-gray-800 rounded-full border hover:bg-gray-100">
 							<%= suggestion %>
 						</span>
 					</a>
 				<% end %>
 			</div>
 		<% end %>
-		<div class="mx-auto mb-24 space-y-2 is-animated sm:container">
-			<%= link_to root_path, class: 'hidden md:inline-block mt-6 md:px-0' do %>
+		<div class="mx-auto mt-6 mb-24 space-y-2 is-animated sm:container">
+			<%= link_to root_path, class: 'mt-6 md:px-0' do %>
 				<div class="c-chip">
 					<svg xmlns="http://www.w3.org/2000/svg" class="h-5 mr-3 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"/>
