--- a/web/app/components/main_sidebar/group_by_day_list_component.html.erb
+++ b/web/app/components/main_sidebar/group_by_day_list_component.html.erb
@@ -20,7 +20,8 @@
 									<% elsif group[0].to_date <= Date.today + 7 %>
 										<%= I18n.l(group[0]&.to_date, format: :week).titlecase %>
 									<% else %>
-										<%= I18n.l(group[0]&.to_date, format: :week).titlecase %>, <%= I18n.l(group[0]&.to_date, format: :long).titlecase %>
+										<%= I18n.l(group[0]&.to_date, format: :week).titlecase %>
+										, <%= I18n.l(group[0]&.to_date, format: :long).titlecase %>
 									<% end %>
 								<% end %>
 							</div>
@@ -32,10 +33,23 @@
 				</div>
 			</div>
 		<% end %>
-	</div>
-	<% if @pagy && @pagy&.last != @pagy&.page %>
-		<div id="main-sidebar--group-by-day-list--pagination" data-infinite-scroll-target="pagination" class="mt-3 mb-10 w-content">
-			<%== helpers.pagy_nav(@pagy) %>
+		<div data-controller="loader"
+				 data-loader-on-loading="feed#load-more:loading"
+				 data-loader-on-loaded="feed#load-more:loaded">
+			<div
+				class="flex font-bold items-center text-brand-600 text-md text-2xl hidden"
+				data-loader-target="loading">
+				Carregando
+				<svg data-loader-target="onIcon" class="w-6 h-6 ml-2 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+					<path fill="none" d="M0 0h24v24H0V0z"/>
+					<path d="M17.65 6.35c-1.63-1.63-3.94-2.57-6.48-2.31-3.67.37-6.69 3.35-7.1 7.02C3.52 15.91 7.27 20 12 20c3.19 0 5.93-1.87 7.21-4.56.32-.67-.16-1.44-.9-1.44-.37 0-.72.2-.88.53-1.13 2.43-3.84 3.97-6.8 3.31-2.22-.49-4.01-2.3-4.48-4.52C5.31 9.44 8.26 6 12 6c1.66 0 3.14.69 4.22 1.78l-1.51 1.51c-.63.63-.19 1.71.7 1.71H19c.55 0 1-.45 1-1V6.41c0-.89-1.08-1.34-1.71-.71l-.64.65z"/>
+				</svg>
+			</div>
+			<% if @pagy && @pagy&.last != @pagy&.page %>
+				<div id="main-sidebar--group-by-day-list--pagination" data-loader-target="loaded" data-infinite-scroll-target="pagination" class="mt-3 mb-10 w-content">
+					<%== helpers.pagy_nav(@pagy) %>
+				</div>
+			<% end %>
 		</div>
-	<% end %>
+	</div>
 </div>
