--- a/web/app/components/movies_component.html.erb
+++ b/web/app/components/movies_component.html.erb
@@ -70,7 +70,7 @@
 								 data-action="mouseenter->hovercard#show mouseleave->hovercard#clearTimerShow"
 								 class="<%= helpers.class_names('flex flex-col transition-transform transform group md:hover:scale-105', { 'w-24': @template == 'default', 'w-16': @template == 'small' }) %>">
 							<% if movie.rating %>
-								<div class="<%= helpers.class_names('absolute bg-white flex font-semibold items-center left-0 ml-1 mt-1 rounded space-x-0.5 text-gray-700 group-hover:text-brand-600 text-xs top-0', { 'p-0.5': @template == 'small', 'p-1': @template == 'default' }) %> " title="votação de usuário do IMDB">
+								<div class="<%= helpers.class_names('absolute flex font-semibold h-16 items-stretch left-0 rounded space-x-0.5 text-white text-xs top-0 w-16', { 'p-0.5': @template == 'small', 'p-1': @template == 'default' }) %> " style="background: radial-gradient(circle at 0% 0%,  black 20%,  transparent 50%);" title="votação de usuário do IMDB">
 									<span class="<%= helpers.class_names({ 'text-xxs': @template == 'small' }) %>"><%= movie.rating %></span>
 									<svg xmlns="http://www.w3.org/2000/svg" class="<%= helpers.class_names('fill-current', { 'h-3.5': @template == 'default', 'h-3': @template == 'small' }) %>" viewBox="0 0 20 20" fill="currentColor">
 										<path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"/>
