Add noreferrer to links in footer

--- a/web/app/views/layouts/_footer.html.erb
+++ b/web/app/views/layouts/_footer.html.erb
@@ -33,7 +33,7 @@
 		</div>
 		<span class="px-2">·</span>
 		<div class="text-brand-600">
-			<a href="https://en.wikipedia.org/wiki/Perpetual_beta" title="release early and release often (even with bugs \o/)" rel="nofollow" target="_blank">Always
+			<a href="https://en.wikipedia.org/wiki/Perpetual_beta" title="release early and release often (even with bugs \o/)" rel="noreferrer" target="_blank">Always
 				in beta 🤙</a>
 		</div>
 	</div>
@@ -41,7 +41,7 @@
 		Ei! Tem ideias de funcionalidades, projetos pra tocar junto, quer conectar uma API, trocar uma ideia... Usa os links acima.
 	</div> -->
 	<div class="">
-		<a class="md:hover:text-brand-500 transition-colors duration-150" href="http://medium.com/@jonataseduardo/potencializando-a-intera%C3%A7%C3%A3o-entre-as-pessoas-para-criarmos-cidades-melhores-5d048bc9c" rel="nofollow" target="_blank">
+		<a class="md:hover:text-brand-500 transition-colors duration-150" href="http://medium.com/@jonataseduardo/potencializando-a-intera%C3%A7%C3%A3o-entre-as-pessoas-para-criarmos-cidades-melhores-5d048bc9c" rel="noreferrer" target="_blank">
 			Sobre ·
 		</a>
 		<a rel="nofollow" class="md:hover:text-brand-600 transition-colors duration-150" href="/privacy">Política de
