--- a/web/app/components/hero/train_event_component.html.erb
+++ b/web/app/components/hero/train_event_component.html.erb
@@ -48,6 +48,7 @@
 							action:     'click->hero--train-event#openEvent',
 							'event-id': @event.id
 						},
+						alt: @event&.name,
 						class:   'rounded md:rounded-lg border cursor-pointer h-full w-24 h-18 md:w-48 md:h-28 object-center object-cover overflow-hidden',
 						onerror: "this.style.opacity='0'"
 					} rescue nil %>
