--- a/web/app/views/layouts/_top-app-bar.html.erb
+++ b/web/app/views/layouts/_top-app-bar.html.erb
@@ -33,7 +33,7 @@
 					</a>
 				<% else %>
 					<% if controller_name != 'search' && controller_name == 'feeds' %>
-						<a href="<%= search_index_path %>">
+						<a href="<%= search_index_path %>" aria-label="Buscar">
 							<svg class="w-6 h-auto fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
 								<path fill="none" d="M0 0h24v24H0V0z"/>
 								<path d="M15.5 14h-.79l-.28-.27c1.2-1.4 1.82-3.31 1.48-5.34-.47-2.78-2.79-5-5.59-5.34-4.23-.52-7.79 3.04-7.27 7.27.34 2.8 2.56 5.12 5.34 5.59 2.03.34 3.94-.28 5.34-1.48l.27.28v.79l4.25 4.25c.41.41 1.08.41 1.49 0 .41-.41.41-1.08 0-1.49L15.5 14zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/>
@@ -50,7 +50,9 @@
 					<%= content_for(:top_app_bar_title) %>
 				</div>
 			<% elsif props[:visible][:logo] %>
-				<a class="inline-block relative mx-auto transition-transform md:transform md:hover:scale-105 md:ml-0" href="<%= root_path %>">
+				<a class="inline-block relative mx-auto transition-transform md:transform md:hover:scale-105 md:ml-0"
+					 aria-label="Página inicial"
+					 href="<%= root_path %>">
 					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 822.44 181" class="h-8">
 						<defs/>
 						<g style="isolation:isolate">
