Remove limit to scalable and zoom

--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 
 	<meta name="theme-color" content="#ffffff"/>
 	<meta name="viewport"
-				content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+				content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
 
 	<%= render partial: 'layouts/meta-tags', cached: -> { [controller_name, action_name] } %>
 	<%= render partial: 'layouts/google_analytics' %>
