Add alt to suggestions images

--- a/web/app/components/hero/horizontal_event_component.html.erb
+++ b/web/app/components/hero/horizontal_event_component.html.erb
@@ -16,7 +16,8 @@
 				<%= @event.name %>
 			<% end %>
 			<div class="pl-2 inline text-xs md:text-sm text-gray-700">
-				<%= helpers.day_of_week(@event.start_time) %> · <%= @event.multiple_hours? ? '+1 horário' : "#{helpers.format_hour(@event.start_time)}h" %> ·
+				<%= helpers.day_of_week(@event.start_time) %>
+				· <%= @event.multiple_hours? ? '+1 horário' : "#{helpers.format_hour(@event.start_time)}h" %> ·
 				<%= @event&.categories_display_name&.capitalize %> ·
 				<%= link_to helpers.limit_place_name_size(@event.place_details_name, 24), place_path(@event.place), class: 'md:hover:underline capitalize' %>
 			</div>
@@ -53,13 +54,15 @@
 					 class="<%= helpers.class_names('h-20 md:h-28 md:w-48 overflow-hidden rounded-lg border relative w-32',
 																					{}) %>">
 				<%= link_to event_path(@event),
-										id:   dom_id(@event, 'hero--horizontal-event__image'),
-										data: {
+										id:           dom_id(@event, 'hero--horizontal-event__image'),
+										'aria-label': "Ver evento #{@event&.title}",
+										data:         {
 											action:     'click->hero--horizontal-event#openEvent',
 											'event-id': @event.id
 										} do %>
 					<%= image_tag helpers.shrine_image_url(@event, :feed), {
 						class:   'cursor-pointer h-full object-center object-cover w-full overflow-hidden',
+						alt:     @event&.name,
 						onerror: "this.style.opacity='0'"
 					} rescue nil %>
 				<% end %>
