--- a/web/app/views/layouts/_footer.html.erb
+++ b/web/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <section class="bg-gray-50 flex flex-col font-light md:px-0 md:text-base mt-10 md:mt-5 px-5 py-6 space-y-1 text-center text-gray-600 text-sm w-full pb-24 md:pb-6 <%= "me-footer--#{params[:controller]}" if params[:controller] %>">
 
-	<a class="inline-block mx-auto w-content" href='https://play.google.com/store/apps/details?id=com.alegreme.app&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
-		<img alt='Disponível no Google Play' width="200" src='https://play.google.com/intl/en_us/badges/static/images/badges/pt-br_badge_web_generic.png'/>
+	<a aria-label="Baixar aplicativo para android" class="inline-block mx-auto w-content" href='https://play.google.com/store/apps/details?id=com.alegreme.app&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
+		<img alt='Disponível no Google Play' loading="lazy" width="200" src='https://play.google.com/intl/en_us/badges/static/images/badges/pt-br_badge_web_generic.png'/>
 	</a>
 
 	<% if !current_user || (current_user && controller_name == 'feeds') %>
@@ -33,7 +33,7 @@
 		</div>
 		<span class="px-2">·</span>
 		<div class="text-brand-600">
-			<a href="https://en.wikipedia.org/wiki/Perpetual_beta" title="release early and release often (even with bugs \o/)" rel="noreferrer" target="_blank">Always
+			<a href="https://en.wikipedia.org/wiki/Perpetual_beta" title="release early and release often (even with bugs \o/)" rel="nofollow noreferrer" target="_blank">Always
 				in beta 🤙</a>
 		</div>
 	</div>
@@ -41,7 +41,7 @@
 		Ei! Tem ideias de funcionalidades, projetos pra tocar junto, quer conectar uma API, trocar uma ideia... Usa os links acima.
 	</div> -->
 	<div class="">
-		<a class="md:hover:text-brand-500 transition-colors duration-150" href="http://medium.com/@jonataseduardo/potencializando-a-intera%C3%A7%C3%A3o-entre-as-pessoas-para-criarmos-cidades-melhores-5d048bc9c" rel="noreferrer" target="_blank">
+		<a class="md:hover:text-brand-500 transition-colors duration-150" href="http://medium.com/@jonataseduardo/potencializando-a-intera%C3%A7%C3%A3o-entre-as-pessoas-para-criarmos-cidades-melhores-5d048bc9c" rel="nofollow noreferrer" target="_blank">
 			Sobre ·
 		</a>
 		<a rel="nofollow" class="md:hover:text-brand-600 transition-colors duration-150" href="/privacy">Política de
