--- a/web/app/views/layouts/_top-app-bar.html.erb
+++ b/web/app/views/layouts/_top-app-bar.html.erb
@@ -26,6 +26,8 @@
 					<a data-controller="ripple"
 						 onclick="TurboModule.backHistory()"
 						 class="relative select-none ripple ripple-black tap-highlight-none"
+						 tabindex="0"
+						 role="button"
 						 aria-label="Voltar">
 						<svg class="h-4 fill-current stroke-current md:w-auto" viewBox="0 0 21 18" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<path d="M10.5 17L1.5 9M1.5 9L10.5 1M1.5 9H20" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
