--- a/web/app/views/welcome/index.html.erb
+++ b/web/app/views/welcome/index.html.erb
@@ -229,7 +229,7 @@
 			Ei! Tem ideias de funcionalidades, projetos pra tocar junto, quer conectar uma API, trocar uma ideia... Usa os links acima. Vlw flw
 		</div> -->
 		<div class="footer__links">
-			<a rel="nofollow" href="http://medium.com/@jonataseduardo/potencializando-a-intera%C3%A7%C3%A3o-entre-as-pessoas-para-criarmos-cidades-melhores-5d048bc9c" rel="noreferrer" target="_blank">
+			<a href="http://medium.com/@jonataseduardo/potencializando-a-intera%C3%A7%C3%A3o-entre-as-pessoas-para-criarmos-cidades-melhores-5d048bc9c" rel="nofollow noreferrer" target="_blank">
 				Manifesto
 			</a> ·
 			<a href="/privacy" rel="nofollow">Política de privacidade</a> ·
