--- a/web/app/components/large_event_component.html.erb
+++ b/web/app/components/large_event_component.html.erb
@@ -102,7 +102,7 @@
 					<% if @event.multiple_hours? %>
 						<%= "#{I18n.l(@event.start_time, format: :day_month_year).capitalize}, em múltiplos horários#{'.' unless @event&.start_time > DateTime.now + 2}" %>
 						<%= ", daqui #{helpers.distance_of_time_in_words @event&.start_time, DateTime.now, false, except: ['minutes']}." if @event&.start_time > DateTime.now + 2 %>
-						<%= link_to 'Confirmar horários', @event.source_url, class: 'text-brand-600', rel: 'nofollow', target: '_blank' rescue nil %>
+						<%= link_to 'Confirmar horários', @event.source_url, class: 'text-brand-600', rel: 'nofollow noreferrer', target: '_blank' rescue nil %>
 					<% else %>
 						<%= "#{I18n.l(@event.start_time, format: :default).capitalize}#{'.' unless @event&.start_time > DateTime.now + 2}" %> <%= ", daqui #{helpers.distance_of_time_in_words @event&.start_time, DateTime.now, false, except: ['minutes']}." if @event&.start_time > DateTime.now + 2 %>
 					<% end %>
