Adjust rounded style of images

--- a/web/app/components/main_sidebar/horizontal_event_component.html.erb
+++ b/web/app/components/main_sidebar/horizontal_event_component.html.erb
@@ -20,7 +20,7 @@
 						data:    {
 							'event-id': @event.id
 						},
-						class:   'border cursor-pointer object-center object-cover h-full w-full rounded md:rounded-lg',
+						class:   'border cursor-pointer object-center object-cover h-full w-full rounded-md md:rounded-lg',
 						onerror: "this.style.opacity='0'"
 					} rescue nil %>
 				<% end %>
