--- a/web/app/views/movies/hovercard.html.erb
+++ b/web/app/views/movies/hovercard.html.erb
@@ -21,7 +21,7 @@
 		<a href="<%= @movie.trailer %>" rel="nofollow" target="_blank" class="c-chip">
 			Ver trailer
 		</a>
-		<a href="<%= cine_film_path(@movie) %>" class="c-chip">
+		<a href="<%= cine_film_path(@movie) %>" class="c-chip c-chip--highlight">
 			Ver horários
 			<svg xmlns="http://www.w3.org/2000/svg" class="ml-1 w-5 h-5" viewBox="0 0 20 20" fill="currentColor">
 				<path fill-rule="evenodd" d="M10.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L12.586 11H5a1 1 0 110-2h7.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd"/>
