--- a/web/app/components/movies_component.html.erb
+++ b/web/app/components/movies_component.html.erb
@@ -1,4 +1,14 @@
-<div id="<%= @id %>" data-turbo-permanent class="select-none mx-auto max-w-screen-lg" data-controller="persist-horizontal-scroll slider" data-model="movie" data-slider-distance-value="400" data-persist-horizontal-scroll-value="0">
+<div class="select-none mx-auto max-w-screen-lg"
+		 data-controller="hovercard persist-horizontal-scroll slider"
+		 data-hovercard-active-value="<%= @hovercard %>"
+		 data-hovercard-hide-mouseenter-value="true"
+		 data-hovercard-preserve-value="false"
+		 data-hovercard-timer-value="1000"
+		 data-model="movie"
+		 data-persist-horizontal-scroll-value="0"
+		 data-slider-distance-value="400"
+		 data-turbo-permanent
+		 id="<%= @id %>">
 	<% if @title %>
 		<h1 class="px-5 md:px-0 c-h2">
 			<%= @title %>
@@ -39,12 +49,7 @@
 				</div>
 			</div>
 		<% end %>
-		<div data-controller="hovercard"
-				 data-hovercard-active-value="<%= @hovercard %>"
-				 data-hovercard-preserve-value="false"
-				 data-hovercard-hide-mouseenter-value="true"
-				 data-hovercard-timer-value="1000"
-				 data-action="mouseleave->hovercard#hide"
+		<div data-action="mouseleave->hovercard#hide"
 				 class="relative">
 			<div class="relative" data-hovercard-target="card" data-action="mouseenter->hovercard#clearTimerHide mouseleave->hovercard#hide"></div>
 			<div class="hidden absolute top-0 left-0 z-20 items-center w-2 h-full select-none md:flex">
