Add new movies tag to movies

--- a/web/app/components/main_sidebar/horizontal_event_component.html.erb
+++ b/web/app/components/main_sidebar/horizontal_event_component.html.erb
@@ -25,7 +25,7 @@
 					} rescue nil %>
 				<% end %>
 				<% if helpers.is_new_event? @event %>
-					<div title="Criado nas últimas 48 horas" class="absolute left-1 -top-2 py-1 px-2 font-semibold bg-brand-600 rounded-full border border-brand-100 md:shadow md:left-3 text-white text-xxs">NOVO</div>
+					<div title="Criado nas últimas 48 horas" class="absolute bg-white border border-brand-100 bottom-1 font-semibold left-1 md:bottom-2 md:left-2 md:shadow px-1 py-0.5 rounded text-brand-600 text-white text-xxs">NOVO</div>
 				<% end %>
 			</div>
 		</div>
