--- a/web/app/components/movies_component.html.erb
+++ b/web/app/components/movies_component.html.erb
@@ -76,20 +76,25 @@
 								 class="<%= helpers.class_names('flex flex-col transition-transform transform group md:hover:scale-105', { 'w-24': @template == 'default', 'w-16': @template == 'small' }) %>">
 							<%= link_to cine_film_path(movie), class: 'flex flex-col', data: { url: hovercard_movie_path(movie), action: 'click->hovercard#show', 'turbo-preserve-scroll': true } do %>
 								<% if movie.rating %>
-									<div class="<%= helpers.class_names('absolute flex rounded-lg font-semibold h-16 items-stretch left-0 space-x-0.5 text-white text-xs top-0 w-16', { 'py-0.5 px-1': @template == 'small', 'py-1 px-2': @template == 'default' }) %> " style="background: radial-gradient(circle at 0% 0%,  black 20%,  transparent 50%);" title="votação de usuário do IMDB">
+									<div class="<%= helpers.class_names('absolute flex rounded-lg font-semibold h-16 items-stretch left-0 space-x-0.5 text-white text-xs top-0 w-16 z-20', { 'py-0.5 px-1': @template == 'small', 'py-1 px-2': @template == 'default' }) %> " style="background: radial-gradient(circle at 0% 0%,  #000000bf 20%,  transparent 50%);" title="votação de usuário do IMDB">
 										<span class="<%= helpers.class_names({ 'text-xxs': @template == 'small' }) %>"><%= movie.rating %></span>
 										<svg xmlns="http://www.w3.org/2000/svg" class="<%= helpers.class_names('fill-current', { 'h-3.5': @template == 'default', 'h-3': @template == 'small' }) %>" viewBox="0 0 20 20" fill="currentColor">
 											<path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"/>
 										</svg>
 									</div>
 								<% end %>
-								<%= image_tag helpers.shrine_image_url(movie, :medium), {
-									loading: :lazy,
-									title:   movie.title,
-									alt:     "Filme #{movie.title}",
-									class:   helpers.class_names('border group-hover:shadow bg-gray-100 object-center object-cover rounded-lg', { 'h-36': @template == 'default', 'h-24': @template == 'small' }),
-									onerror: "this.style.opacity='0'"
-								} rescue nil %>
+								<div class="relative z-10">
+									<% if @template != 'small' && helpers.is_new_movie?(movie) %>
+										<div title="Criado nos últimos 5 dias" class="absolute bg-white border border-brand-100 bottom-1 font-semibold left-1 md:bottom-2 md:left-2 md:shadow px-1 py-0.5 rounded text-brand-600 text-white text-xxs">NOVO</div>
+									<% end %>
+									<%= image_tag helpers.shrine_image_url(movie, :medium), {
+										loading: :lazy,
+										title:   movie.title,
+										alt:     "Filme #{movie.title}",
+										class:   helpers.class_names('border group-hover:shadow bg-gray-100 object-center object-cover rounded-lg', { 'h-36': @template == 'default', 'h-24': @template == 'small' }),
+										onerror: "this.style.opacity='0'"
+									} rescue nil %>
+								</div>
 								<%= tag.div helpers.limit_name_size(movie.title, 30), class: 'group-hover:text-brand-600 text-xs font-medium inline-block leading-tight mt-2 text-gray-900' if @template == 'default' %>
 								<%= tag.div class: 'group-hover:text-brand-600 mt-1 leading-tight text-gray-700 text-xxs' do %>
 									<%= movie.genres&.join(", ") %>
