--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -6,7 +6,7 @@
 	<div id="hero__presentation" data-turbo-permanent="" class="overflow-hidden relative gap-3 items-center mb-6 h-72 bg-gray-100 select-none md:h-52 md:items-start md:mb-12 md:mx-0 tap-highlight-none" style="min-height: 200px;background: linear-gradient(0deg, #f9f9f9, transparent); ">
 		<div class="relative z-20 mx-auto max-w-screen-lg h-full">
 			<%= image_pack_tag 'media/images/hero/banner.png', class: 'z-10 -top-12 absolute md:-top-24 md:right-0 md:w-4/12 object-cover top-0 w-full' %>
-			<div class="flex relative z-20 flex-col justify-end items-center pb-5 px-5 h-full md:justify-center md:items-baseline md:w-7/12">
+			<div class="flex relative z-20 flex-col justify-end items-center pb-5 px-5 md:px-0 h-full md:justify-center md:items-baseline md:w-7/12">
 				<h1 class="hidden md:inline-block c-h2">
 					Eventos e cinema em Porto Alegre
 				</h1>
