--- a/web/app/views/feeds/_filter.html.erb
+++ b/web/app/views/feeds/_filter.html.erb
@@ -1,41 +1,116 @@
-<%
-
-	filters = local_assigns.fetch(:filters, [])
-	selected = local_assigns.fetch(:selected, {days: [], categories: []})
-
-%>
-
-<% if filters.present? %>
-	<div class="scrollx">
-		<div data-filter-target="chipset"
-				 class="grid gap-2 grid-after-margin grid-flow-col md:pl-0 pl-5 w-content">
-			<% if type == 'days' %>
-				<% filters.reject { |filter| filter['decorator'].blank? }.each_with_index do |filter, index| %>
-					<div class="tap-highlight-none select-none antialiased bg-gray-50 border px-4 py-1 rounded-full text-gray-800 cursor-pointer transform transition-colors duration-200"
-							 data-action="click->filter#select"
-							 data-chip-type="<%= type %>"
-							 data-chip-value="<%= filter['string'] %>"
-							 data-chip-selected="<%= selected[:days].include?(filter['string']) ? 'true' : 'false' %>"
-							 data-filter-target="chip"
-							 data-turbo-scroll="false"
-							 id="<%= "#{type}-#{index}" %>">
-						<%= filter['decorator'] %>
-					</div>
+<%= turbo_frame_tag 'filter',
+										id:    'main-sidebar--filter',
+										data:  { controller: 'filter', action: 'turbo:before-fetch-request@document->filter#loading turbo:frame-render@document->filter#loaded' },
+										class: 'inline-block -mx-5 duration-300 md:overflow-x-auto px-5 scrollx transition-all translate-x-32' do %>
+	<div class="flex flex-wrap md:w-auto pt-4 w-content">
+		<% if @category.blank? %>
+			<% if @theme.present? %>
+				<%= content_tag :div,
+												data:  { action: 'click->filter#open' },
+												class: 'c-chip--active mb-3 mr-3' do %>
+					<svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-1" viewBox="0 0 20 20" fill="currentColor">
+						<path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"/>
+					</svg>
+					<%= @theme.display_name %>
 				<% end %>
+				<div data-action="click->filter#clear" class="c-chip mb-3 mr-3 group">
+					Limpar filtro
+					<svg xmlns="http://www.w3.org/2000/svg" class="-mr-1.5 fill-current h-5 group-hover:text-red-400 ml-1.5 w-5" viewBox="0 0 20 20" fill="currentColor">
+						<path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z" clip-rule="evenodd"/>
+					</svg>
+				</div>
 			<% else %>
-				<% filters.reject(&:blank?).each_with_index do |filter, index| %>
-					<div class="tap-highlight-none select-none antialiased bg-gray-50 border mdc-chip me-chip px-4 py-1 rounded-full text-gray-800 cursor-pointer"
-							 data-action="click->filter#select"
-							 data-chip-type="<%= type %>"
-							 data-chip-value="<%= filter %>"
-							 data-chip-selected="<%= selected[:categories].include?(filter) ? 'true' : 'false' %>"
-							 data-filter-target="chip"
-							 data-turbo-scroll="false"
-							 id="<%= "#{type}-#{index}" %>">
-						<%= filter %>
-					</div>
+				<%= link_to feed_filter_path(filter_group: 'theme'),
+										class: 'c-chip mr-3 mb-3' do %>
+					<svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-1" viewBox="0 0 20 20" fill="currentColor">
+						<path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"/>
+					</svg>
+					Mood
 				<% end %>
 			<% end %>
+		<% end %>
+
+		<% if @theme.blank? %>
+			<% if @category.present? %>
+				<%= content_tag :div,
+												data:  { action: 'click->filter#open' },
+												class: 'c-chip--active mb-3 mr-3' do %>
+					<svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-1" viewBox="0 0 20 20" fill="currentColor">
+						<path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"/>
+					</svg>
+					<%= @category&.details['display_name'] %>
+				<% end %>
+				<div data-action="click->filter#clear" class="c-chip mb-3 mr-3 group">
+					Limpar filtro
+					<svg xmlns="http://www.w3.org/2000/svg" class="-mr-1.5 fill-current h-5 group-hover:text-red-400 ml-1.5 w-5" viewBox="0 0 20 20" fill="currentColor">
+						<path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z" clip-rule="evenodd"/>
+					</svg>
+				</div>
+			<% else %>
+				<%= link_to feed_filter_path(filter_group: 'category'),
+										class: 'c-chip mb-3 mr-3' do %>
+					<svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-1" viewBox="0 0 20 20" fill="currentColor">
+						<path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"/>
+					</svg>
+					Categorias
+				<% end %>
+			<% end %>
+		<% end %>
+	</div>
+
+	<div data-filter-target="modal" class="<%= class_names('overflow-y-auto fixed inset-0 z-50', { 'hidden': !@open }) %>">
+		<div class="flex justify-center items-center px-4 pt-4 pb-20 min-h-screen text-center sm:block sm:p-0">
+
+			<div data-action="click->filter#close" class="fixed inset-0 transition-opacity" aria-hidden="true">
+				<div class="absolute inset-0 bg-gray-500 opacity-75"></div>
+			</div>
+
+			<!-- This element is to trick the browser into centering the modal contents. -->
+			<span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
+
+			<div class="inline-block overflow-hidden p-5 text-left align-bottom bg-white rounded-lg shadow-xl transition-all transform sm:my-8 sm:align-middle sm:max-w-lg sm:w-full">
+				<svg data-action="click->filter#close" xmlns="http://www.w3.org/2000/svg" class="absolute cursor-pointer h-6 hover:text-brand-500 right-5 top-5 w-6" viewBox="0 0 20 20" fill="currentColor">
+					<path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z" clip-rule="evenodd"/>
+				</svg>
+				<div class="flex items-center pb-2 text-xl font-bold text-gray-900 bg-white font-display">
+					<%= @show_filter_group == 'category' ? 'Categorias' : 'Mood' %>
+					<svg data-filter-target="loadingIcon" class="ml-2 w-7 h-7 opacity-0 transition-opacity fill-current text-brand-600" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+						<path fill="none" d="M0 0h24v24H0V0z"/>
+						<path d="M17.65 6.35c-1.63-1.63-3.94-2.57-6.48-2.31-3.67.37-6.69 3.35-7.1 7.02C3.52 15.91 7.27 20 12 20c3.19 0 5.93-1.87 7.21-4.56.32-.67-.16-1.44-.9-1.44-.37 0-.72.2-.88.53-1.13 2.43-3.84 3.97-6.8 3.31-2.22-.49-4.01-2.3-4.48-4.52C5.31 9.44 8.26 6 12 6c1.66 0 3.14.69 4.22 1.78l-1.51 1.51c-.63.63-.19 1.71.7 1.71H19c.55 0 1-.45 1-1V6.41c0-.89-1.08-1.34-1.71-.71l-.64.65z"/>
+					</svg>
+				</div>
+				<div data-filter-target="filters" class="space-y-6">
+					<% if @show_filter_group == 'category' %>
+						<div class="flex flex-wrap lowercase">
+							<% @categories.each do |category| %>
+
+								<%= link_to root_path(category: category.details_url, filter_group: 'category'),
+														data:  { 'turbo-frame': 'main-sidebar--feed' },
+														class: class_names('mb-2 mr-2 text-sm',
+																							 { 'c-chip--active': @category == category,
+																								 'c-chip':         @category != category }) do %>
+									<%= category.details_display_name %>
+								<% end %>
+							<% end %>
+						</div>
+					<% end %>
+					<% if @show_filter_group == 'theme' %>
+						<div class="flex flex-wrap lowercase">
+							<% @themes.each do |theme| %>
+								<%= link_to root_path(theme: theme.slug, filter_group: 'theme'),
+														data:  { 'turbo-frame': 'main-sidebar--feed' },
+														class: class_names('mb-2 mr-2 text-sm',
+																							 { 'c-chip--active': @theme == theme,
+																								 'c-chip':         !@theme != theme }) do %>
+									<%= theme.display_name %>
+								<% end %>
+							<% end %>
+						</div>
+					<% end %>
+				</div>
+			</div>
 		</div>
 	</div>
 <% end %>
+
+
