--- a/web/app/views/movies/show.html.erb
+++ b/web/app/views/movies/show.html.erb
@@ -50,7 +50,7 @@
 			<div class="flex flex-col items-center mt-6 space-y-3 md:items-start md:mt-2">
 				<div class="flex flex-col items-center md:flex-row md:items-center md:justify-between md:w-full">
 					<div class="space-y-1 text-center md:text-left md:pr-5">
-						<div class="flex flex-row justify-center items-center px-10 md:px-0 md:justify-start">
+						<div class="flex flex-col md:flex-row justify-center items-center px-10 md:px-0 md:justify-start">
 							<h1 class="c-h2">
 								<%= @movie.title %>
 							</h1>
